Fix T39161: Scaling fails w/ snap-to-point